# dixie

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs
src/core/: config.rs  error.rs  mod.rs
src/core/crud/: mod.rs  read.rs  write.rs
src/core/db/: error.rs  mod.rs
src/core/header_map/: authorization.rs  context.rs  mod.rs  uri.rs
src/core/pagination/: limit_offset.rs  mod.rs
src/models/: token.rs  user.rs
