[package]
name = "dixie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
mongodb = "2.8.2"
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["mongodb"]
